--- a/index.html
+++ b/index.html
@@ -37,10 +37,19 @@
 
   </div>
 
-  <div class="container-fluid instructions">
-    <p>Firstly, the game shows the first colour in the sequence (blue). The user clicks on the blue button. Next, the game shows the next colour (red), the user has to remember the sequence is blue, red and so on and so forth.
-      If the user messes up the sequence, then the game ends.</p>
-    <img class="instructions-gif" src="https://udemy-images.s3.amazonaws.com:443/redactor/raw/2018-11-22_12-47-22-8bcfca3d023a952c07c651c8dd7714bd.gif" alt="">
+  <div class="instructions">
+    <div class="row">
+      <div class="col-lg-12">
+        <p>Firstly, the game shows the first colour in the sequence (blue). The user clicks on the blue button. Next, the game shows the next colour (red), the user has to remember the sequence is blue, red and so on and so forth.
+          If the user messes up the sequence, then the game ends.</p>
+      </div>
+      <div class="col-lg-12">
+        <img class="instructions-gif" src="https://udemy-images.s3.amazonaws.com:443/redactor/raw/2018-11-22_12-47-22-8bcfca3d023a952c07c651c8dd7714bd.gif" alt="Game demonstration gif">
+      </div>
+    </div>
+
+    
+
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
