--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Simon</title>
+  <title>Simon Game</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
@@ -11,9 +11,9 @@
 
 <body>
   <h1 id="level-title">Press Any Key to Start</h1>
-  <h1 id="instructions">Game instructions</h1>
-  <div class="container game-screen">
-    <div lass="row">
+
+  <div class="game-screen">
+    <div>
 
       <div type="button" id="green" class="btn green">
 
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div>
 
       <div type="button" id="yellow" class="btn yellow">
 
@@ -40,17 +40,22 @@
   <div class="instructions">
     <div class="row">
       <div class="col-lg-12">
-        <p>Firstly, the game shows the first colour in the sequence (blue). The user clicks on the blue button. Next, the game shows the next colour (red), the user has to remember the sequence is blue, red and so on and so forth.
-          If the user messes up the sequence, then the game ends.</p>
+        <h1 id="instructions">Game instructions</h1>
+      </div>
+      <div class="col-lg-12">
+        <p>Firstly, the game shows the first colour in the sequence i-e "blue". The player clicks on that blue button. Next, the game shows the next colour i-e "red", the player has to remember the sequence that is blue, red and so on and so forth.
+          If the player messes up the sequence, then the game ends and player loses.</p>
       </div>
       <div class="col-lg-12">
         <img class="instructions-gif" src="https://udemy-images.s3.amazonaws.com:443/redactor/raw/2018-11-22_12-47-22-8bcfca3d023a952c07c651c8dd7714bd.gif" alt="Game demonstration gif">
       </div>
     </div>
-
-    
-
   </div>
+
+    <button id=ok-button type="button" class="btn btn-primary btn-sm ok">OK</button>
+    <button id=play-button type="button" class="btn btn-primary btn-sm play">Play game</button>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.js"></script>
