--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="game-screen">
     <div>
 
-      <div type="button" id="green" class="btn green">
+      <div type="button" id="green" class="btn green col-lg-6">
 
       </div>
 
@@ -26,7 +26,7 @@
 
     <div>
 
-      <div type="button" id="yellow" class="btn yellow">
+      <div type="button" id="yellow" class="btn yellow col-lg-6">
 
       </div>
       <div type="button" id="blue" class="btn blue">
